# Interfaces

./: .clang-format  .gitmodules  .gitpod.yml  .travis.yml  IConverter[TSource, TTarget].cs  IConverter[T].cs  ICounter[TArgument, TResult].cs  ICounter[TResult, TArgument].cs  ICounter[TResult].cs  ICreteriaMatcher.cs  ICriterionMatcher.cs  IFactory.cs  IIncrementer.cs  IPropertiesOperator.cs  IProperty.cs  IPropertyOperator.cs  IProvider[TProvided, TArgument].cs  IProvider[TProvided].cs  ISetter[TValue, TArgument].cs  Platform.Interfaces.csproj  Platform.Interfaces.sln  README.html  README.md  docfx.json  format-csharp-files.py  format-document.sh  index.html  index.json  manifest.json  publish-docs.sh  publish-release.sh  push-nuget.sh  run-tests-gitpod.sh  toc.html  toc.yml  xrefmap.yml
CSharpToCppTranslator/: CSharpToCppTranslator.csproj  CustomCSharpToCppTransformer.cs  Program.cs
Platform.Interfaces/: ICriterionMatcher.cs  IFactory.cs  IProperties.cs  IProvider[TProvided, TArgument].cs  IProvider[TProvided].cs  ISetter[TValue].cs  Platform.Interfaces.csproj
Platform.Interfaces.Tests/: Platform.Interfaces.Tests.csproj
api/: Platform.Interfaces.IConverter-1.html  Platform.Interfaces.IConverter-2.html  Platform.Interfaces.ICounter-1.html  Platform.Interfaces.ICounter-2.html  Platform.Interfaces.ICriterionMatcher-1.html  Platform.Interfaces.IFactory-1.html  Platform.Interfaces.IIncrementer-1.html  Platform.Interfaces.IProperties-3.html  Platform.Interfaces.IPropertiesOperator-3.html  Platform.Interfaces.IProperty-2.html  Platform.Interfaces.IPropertyOperator-2.html  Platform.Interfaces.IProvider-1.html  Platform.Interfaces.IProvider-2.html  toc.html  (+3 more)
cpp/: .clang-format  CMakeLists.txt  setup-gitpod.sh
cpp/Platform.Interfaces/: CArray.h  CCounter.h  CCriterionMatcher.h  CDictionary.h  CEnumerable.h  CFactory.h  CLinkAddress.h  CList.h  CMakeLists.txt  CProperties.h  CProperty.h  CProvider.h  CSet.h  CSetter.h  Decorated.h  DecoratedBase.h  DecoratorBase.h  Extended.h  ExtendedBase.h  ExtendedContainer.h  ExtendedContainerBase.h  ExtendedReference.h  ExtendedReferenceBase.h  Facaded.h  FacadedBase.h  FacadedIntermediate.h  IArray.h  ICli.h  ICounter[TResult, TArgument].cpp  ICounter[TResult, TArgument].h  ICounter[TResult].cpp  ICounter[TResult].h  ICriterionMatcher.cpp  ICriterionMatcher.h  IDictionary.h  IEnumerable.h  IFactory.cpp  IFactory.h  IList.h  IProperties.cpp  (+23 more)
cpp/Platform.Interfaces.Tests/: AllTests.cpp  CMakeLists.txt  InterfacesTests.cpp  Platform.Interfaces.TemplateLibrary.Tests.cpp  Platform.Interfaces.TemplateLibrary.Tests.vcxproj  Platform.Interfaces.TemplateLibrary.Tests.vcxproj.filters  Platform.Interfaces.Tests.cpp  pch.h
cpp/Platform.Interfaces/NuGetPackageSource/: Platform.Interfaces.TemplateLibrary.0.0.1.nuspec
(+45 files in other folders)
